# broker

./: .env.example  .gitignore  .gitmodules  Cargo.toml  broker.sublime-workspace
protos/: Cargo.toml  build.rs
protos/src/: database.rs  lib.rs  recommender.rs
protos/src/types/: alerts.rs  mod.rs  ratings.rs  users.rs
src/: broker.sublime-workspace  main.rs
src/bins/: hash.rs
src/config/: auth.rs  logger.rs  mod.rs  services.rs
src/controllers/: authentication.rs  mod.rs
src/controllers/alerts/: get.rs  mod.rs
src/controllers/alerts/recommendations/: content_based.rs  mod.rs  top.rs
src/controllers/alerts/recommendations/non_personalized/: mod.rs  top_n.rs
src/controllers/alerts/recommendations/personalized/: collaborative_filtering.rs  content_based.rs  mod.rs
src/controllers/users/: create.rs  mod.rs
src/grpc/: mod.rs
src/grpc/database/: alerts.rs  mod.rs  users.rs
src/grpc/recommender/: mod.rs  non_personalized.rs  personalized.rs
src/middlewares/: auth.rs  authorization.rs  mod.rs  validation.rs
src/models/: alerts.rs  mod.rs  user.rs
src/resources/errors/: alerts.rs  auth.rs  mod.rs  users.rs  validation.rs
src/routes/: alerts.rs  auth.rs  mod.rs  users.rs
src/utils/: jwt.rs
