[package]
name = "broker"
version = "0.1.0"
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "=1.0.6"
actix-web = "=3.3.2"
actix-web-httpauth = "=0.5.1"
async-trait = "0.1.50"
config = "=0.11.0"
dotenv = "=0.15.0"
env_logger = "=0.8.3"
futures = "=0.3.15"
jsonwebtoken = "=7.2.0"
log = "=0.4.14"
serde = { version = "=1.0.126", features = ["derive"] }
serde_json = "=1.0.64"
validator = { version = "=0.13.0", features = ["derive"] }
