[package]
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"
name = "protos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "=0.3"
grpcio = {version = "=0.9", default-features = false, features = ["protobuf-codec"]}
protobuf = "=2"

[build-dependencies]
protobuf-build = {version = "=0.12", default-features = false, features = ["grpcio-protobuf-codec"]}
walkdir = "=2.3"
